# fuzzyrust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  coverage.xml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: index.md  performance.md  polars_guide.md  roadmap.md
docs/api/: core.md  indexing.md  polars.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: algorithms.md  indexing.md  large-scale.md  polars.md  schema.md
examples/: 01_ecommerce_product_search.ipynb  02_customer_deduplication.ipynb  03_company_entity_resolution.ipynb  04_address_geocoding_fallback.ipynb  05_medical_terminology_matching.ipynb  06_resume_job_matching.ipynb  accuracy_comparison.py  benchmarks.py  industrial_parts.py  polars_demo.py  quickstart.py
python/fuzzyrust/: __init__.py  __init__.pyi  _utils.py  batch.py  batch.pyi  enums.py  expr.py  index.py  polars_api.py  polars_ext.py
python/fuzzyrust/_plugin/: __init__.py
python/fuzzyrust/polars/: __init__.py  __init__.pyi
src/: dedup.rs  lib.rs  metrics.rs
src/algorithms/: cosine.rs  damerau.rs  fuzz.rs  hamming.rs  jaro.rs  lcs.rs  levenshtein.rs  mod.rs  ngram.rs  normalize.rs  phonetic.rs
src/indexing/: bktree.rs  mod.rs  ngram_index.rs  sharded.rs  threadsafe.rs
src/indexing/schema/: field.rs  field_indices.rs  index.rs  mod.rs  schema.rs  scoring.rs  storage.rs  types.rs
src/polars/: expressions.rs  mod.rs
tests/: test_batch.py  test_concurrency.py  test_core.py  test_correctness.py  test_edge_cases.py  test_fuzz.py  test_fuzzing.py  test_helpers.py  test_indexes.py  test_jaro.py  test_lcs.py  test_levenshtein.py  test_memory.py  test_metrics.py  test_ngram.py  test_normalization.py  test_performance_optimizations.py  test_phonetic.py  test_polars.py  test_polars_api.py  test_polars_edge_cases.py  test_polars_plugin.py  test_properties.py  test_reference_correctness.py  test_scale.py  test_schema.py  test_schema_edge_cases.py  test_validation.py
tests/fixtures/: __init__.py  real_data.py
