[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fuzzyrust"
version = "0.1.1"
description = "High-performance string similarity library for Python, written in Rust"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
keywords = ["fuzzy", "string", "similarity", "search", "levenshtein", "jaro-winkler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
authors = [{name = "Tomislav Suhina", email = "tomislav.suhina@gmail.com"}]
# No runtime dependencies - pure Rust extension module

[project.urls]
Homepage = "https://github.com/tsuhina/fuzzyrust"
Documentation = "https://github.com/tsuhina/fuzzyrust#readme"
Repository = "https://github.com/tsuhina/fuzzyrust"
Issues = "https://github.com/tsuhina/fuzzyrust/issues"

[project.optional-dependencies]
dev = [
    "maturin>=1.7,<2.0",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.14.10",
    "pytest-cov>=7.0.0",
]
benchmarks = [
    "jellyfish>=1.2.1",
    "python-levenshtein>=0.27.1",
    "rapidfuzz>=3.13.0",
    "thefuzz>=0.22.1",
]
polars = [
    "polars>=1.36.1",
]
jupyter = [
    "jupyter>=1.1.1",
]
all = [
    "fuzzyrust[dev,benchmarks,polars,jupyter]",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fuzzyrust._core"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
]
addopts = "--cov=fuzzyrust --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["python/fuzzyrust"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["python", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "PERF",   # Perflint
    "FLY",    # flynt (f-string conversion)
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "PLC0415",  # import not at top level (used for optional dependency checks)
    "RUF022",   # __all__ not sorted (intentionally grouped by category)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "PLC0415", "E501", "E402", "B007", "PERF102", "RUF001", "ERA001", "F401", "F841"]
"examples/*" = ["E402", "B023", "E501", "ARG001", "SIM102", "F841", "ERA001", "B007"]
"python/fuzzyrust/__init__.pyi" = ["UP006", "UP007", "UP035", "UP045", "E501"]  # type stubs use older syntax for py39 compat
"python/fuzzyrust/polars_ext.py" = ["UP006", "UP035", "PERF401", "ARG001"]  # polars integration

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

